--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
 <body>
 
-    <div class="RadialProgress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="RadialProgress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <span class="progress-value"> 0% </span>
+    </div>
     
     <input type="range" value="25" min="0" max="100" />
+    <script src= "script.js"> </script>
+    
 
 </body>
 
