--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <span class="progress-value"> 0% </span>
     </div>
     
+
     <input type="range" value="25" min="0" max="100" />
+
+    <button id="sendRequestBtn">Send Request</button>
+
     <script src= "script.js"> </script>
     
-
 </body>
 
 </html>
